2020-06-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfcolor.[ch], pdfdoc.c, pdfdraw.c, spc_util.c: An extension
	to the color support. All color-spaces can be supported (only
	for pdf: color commands). ColorSpace can be specified by a
	name key (e.g. DeviceRGB) or an object reference which is a
	reference to an object defining ColorSpace itself.
	* configure.ac: Version 20200627.

2020-06-24  Akira Kakuto  <kakuto@w32tex.org>

	* dpxfile.c, pdfximage.c: Remove unnecessary changes on
	2020-06-22.

2020-06-22  Akira Kakuto  <kakuto@w32tex.org>

	* dvipdfmx.c: Move dpx_delete_old_cache(image_cache_life)
	because image caching did'nt work.
	* dvi.c: Use MFOPEN() instead of fopen().
	* dpxfile.c, pdfximage.c: Use generalized stat() to handle
	UTF-8 names (Windows only).

2020-06-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Lower priority for Soft-hyphen U+00AD when
	generating ToUnicode CMap.
	* tt_cmap.c, type1c.c: Cause an error when "CFF " table is not
	found. (Possibly due to variable font which uses unsupported
	"CFF2" table)

2020-06-09  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdfdev.c: Another workaround for fake-bold issue.
	(See changes 2019-06-30 and 2020-02-29)

2020-05-26  Akira Kakuto  <kakuto@w32tex.org>

	* dvi.c: Introduce rgba_used in order to indicate that
	rgba_color for a XeTeX font is used or not. It enables full
	range of opacity, 0-255.
	* configure.ac: Version 20200526.

2020-05-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* vf.c: reduce message by '-v' less than by '-vv' for
	fallback of virtual fonts.

2020-05-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-upjf.test, Makefile.{am,in},
	tests/Makefile_upjf, tests/upjf{,-r,-g}.tfm,
	tests/upjf.{tex,dvi,map}, tests/upjf_{full,omit}.vf,
	tests/upjf_{full,omit}.cnf, tests/UPJF-UTF16-H:
	Add a new test for fallback of virtual fonts.
	* vf.c: Tweak debugging message for fallback of virtual fonts.

2020-03-27  Karl Berry  <karl@tug.org>
